Implementada novas classes para funcionamente do sistema

--- a/FinancialControl/WebContent/index.xhtml
+++ b/FinancialControl/WebContent/index.xhtml
@@ -49,7 +49,7 @@
 			        			<h:outputLabel for="senha" value="Senha: "/>
 			        			<p:password id="senha" value="#{cadastroUsuario.usuario.senha}" label="Senha" size="30"/>
 			        			
-			        			<p:commandButton id="salvarCadastro" update="janelaCadastro" value="Cadastrar" action="#{cadastroUsuario.adicionaUsuario}"/>
+			        			<p:commandButton id="salvarCadastro" update="janelaCadastro" value="Cadastrar" action="#{cadastroUsuario.adicionarUsuario}"/>
 			        		</h:panelGrid>
 			        	</p:panel>  
 			        </h:panelGrid>  
