--- a/FinancialControl/WebContent/index.xhtml
+++ b/FinancialControl/WebContent/index.xhtml
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 	
 	<h:head>
 		<title>Controle de Finanças - Woolsk</title>
@@ -20,12 +20,12 @@
 					        <p:messages id="messages" showDetail="true" autoUpdate="true"/>  
 					        <h:panelGrid columns="2" id="janelaAcesso">                     
 					            <h:outputLabel for="labelUsuario" value="Úsuario: *" />  
-					            <p:inputText id="labelUsuario" value="#{passwordBean.password5}" label="Úsuario" required="true"/>  
+					            <p:inputText id="labelUsuario" value="#{acessoUsuario.usuario.nomeUsuario}" label="Úsuario" required="true"/>  
 					  
 					            <h:outputLabel for="labelSenha" value="Senha: *" />  
-					            <p:password id="labelSenha" value="#{passwordBean.password5}" label="Senha" required="true"/>  
+					            <p:password id="labelSenha" value="#{acessoUsuario.usuario.senha}" label="Senha" required="true"/>  
 					        </h:panelGrid>  
-					        <p:commandButton id="saveButton" update="janelaAcesso" value="Acessar" />  
+					        <p:commandButton id="saveButton" update="janelaAcesso" value="Acessar" action="#{acessoUsuario.validaAcesso}"/>
 				   		</p:panel>
 			        </h:panelGrid> 
 	   			</p:tab>
